--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "proDevStart": "nodemon app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "devStart": "ts-node-dev --transpile-only --no-notify --exit-child src/index.ts",
     "generateSchemaTypeGen": "ts-node --transpile-only src/schema.ts",
@@ -13,29 +14,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/chalk": "^2.2.0",
-    "@types/express-session": "^1.17.4",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/morgan": "^1.9.3",
-    "apollo-server": "3.1.1",
+    "apollo-server-express": "^3.6.6",
     "bcrypt": "^5.0.1",
-    "chalk": "^4.0.0",
-    "connect-session-sequelize": "^7.1.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-graphql": "^0.12.0",
-    "express-session": "^1.17.2",
-    "graphql": "15.5.1",
-    "graphql-tools": "^8.2.0",
+    "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3",
-    "nexus": "1.1.0",
-    "sequelize": "^6.17.0"
+    "ts-node": "^10.7.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
     "ts-node-dev": "1.1.8",
     "typescript": "4.3.5"
   }
