--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -12,6 +12,9 @@
     "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@expo/metro-config": "^0.3.12",
+    "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
@@ -19,7 +22,10 @@
     "@react-navigation/native-stack": "^6.5.2",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
+    "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
+    "graphql": "^16.3.0",
+    "metro-config": "^0.70.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
