--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -14,14 +14,17 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@expo/metro-config": "^0.3.12",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
+    "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
+    "expo-image-picker": "~12.0.1",
     "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.3.0",
@@ -29,6 +32,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.3.1",
@@ -42,6 +46,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.10",
     "concurrently": "^7.0.0",
     "postcss": "^8.4.12",
