--- a/client/mobile/app.json
+++ b/client/mobile/app.json
@@ -10,6 +10,11 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "plugins": [
+      [
+        "expo-image-picker",{"photosPermission": "The app accesses your photos to let you set custom photos for organization."}
+      ]
+    ],
     "updates": {
       "fallbackToCacheTimeout": 0
     },
