--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install": "cd backend && yarn && cd ../client/mobile && yarn && cd ../web && yarn",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "development": "concurrently \"cd backend && npm run devStart\" \"cd client && cd mobile && npm start\""
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
     "prettier": "^2.5.1"
   },
   "dependencies": {
+    "concurrently": "^7.1.0",
     "typescript": "^4.6.2"
   }
 }
