--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -28,6 +28,7 @@
     "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.3.0",
+    "jwt-decode": "^3.1.2",
     "metro-config": "^0.70.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
