updated controllers to add a new route. finished writting the create medication-controller route updated schemas accordingly

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,1 @@
-SEQUELIZE_LOGGING='false'
-SESSION_SECRET=''
-COOKIE_AGE_MINUTES=5 # currently broken will fix
-DB_NAME='teach_bot_db'
-DB_USER=''
-DB_PW=''
-AI21_API_KEY='' # make an account here to get an api key https://www.ai21.com/studio
+JWT_SECRET=''
