--- a/client/mobile/.env.sample
+++ b/client/mobile/.env.sample
@@ -1,4 +1,4 @@
-NODE_ENV="development"
-DEV_USERNAME="" #set this after creating an account
-DEV_PASSWORD="" #set this after creating an account
-SERVER_URL="http://localhost:4000/graphql"
+REACT_APP_NODE_ENV="development"
+REACT_APP_DEV_USERNAME="hello" #set this after creating an account
+REACT_APP_DEV_PASSWORD="hello" #set this after creating an account
+REACT_APP_SERVER_URL="http://localhost:3001/graphql"
