--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -49,6 +49,7 @@
     "@types/react-native": "~0.64.12",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.10",
+    "@welldone-software/why-did-you-render": "^7.0.1",
     "concurrently": "^7.0.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
