--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -8,6 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
+    "android-shake": "adb shell input keyevent 82",
     "build:tailwind": "tailwindcss --input input.css --output tailwind.css --no-autoprefixer && tailwind-rn",
     "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
@@ -21,9 +22,12 @@
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
+    "apollo-link-error": "^1.1.13",
+    "apollo-upload-client": "^17.0.0",
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
+    "expo-image-manipulator": "~10.2.0",
     "expo-image-picker": "~12.0.1",
     "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
@@ -35,6 +39,7 @@
     "react-native": "0.64.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-mime-types": "^2.3.0",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
@@ -45,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/apollo-upload-client": "^17.0.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-native-dotenv": "^0.2.0",
