--- a/backend/package.json
+++ b/backend/package.json
@@ -13,19 +13,24 @@
   "dependencies": {
     "apollo-server-express": "^3.6.6",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
+    "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "ts-node": "^10.7.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/graphql-upload": "^8.0.11",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "ts-node-dev": "1.1.8",
     "typescript": "4.3.5"
   }
