--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^3.6.6",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
